force-app/main/default/objects/RW_Welcome_Call_Remarks__c/RW_Welcome_Call_Remarks__c.object-meta.xml
<CustomObject>
    <label>Welcome Call Remarks</label>
    <nameField>
        <label>Welcome Call Remarks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Welcome Call Remarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>