force-app/main/default/objects/RW_Welcome_Call_Remarks__c/fields/RW_ReceiptListRemarks__c.field-meta.xml
<CustomField>
    <fullName>RW_ReceiptListRemarks__c</fullName>
    <label>ReceiptListRemarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>