force-app/main/default/objects/RW_Welcome_Call_Remarks__c/fields/RW_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RW_Remarks__c</fullName>
    <label>Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>