force-app/main/default/objects/RW_Welcome_Call_Remarks__c/fields/RW_Welcome_Call__c.field-meta.xml
<CustomField>
    <fullName>RW_Welcome_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welcome Call</label>
    <referenceTo>RW_Welcome_Call__c</referenceTo>
    <relationshipLabel>Welcome Call Remarks</relationshipLabel>
    <relationshipName>Welcome_Call_Remarks</relationshipName>
    <type>Lookup</type>
</CustomField>